[tool.poetry]
name = "drawio-cli-exporter"
version = "0.1.0"
description = ""
authors = ["Jacques Supcik <jacques@supcik.net>"]
license = "Apache-2"
readme = "README.md"
packages = [{ include = "drawio_exporter" }]

[tool.poetry.dependencies]
python = ">=3.10"
psutil = "^5.9.5"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pylint = "^2.17.5"

[tool.poetry.scripts]
drawio-exporter = "drawio_exporter.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
